--- a/style.css
+++ b/style.css
@@ -520,22 +520,18 @@ body{
   }
 }
 
-@media (max-width: 767px){
-  .bn16{
-    margin-bottom: -100px;
-  }
-}
+
 
 .container-card {
-  height: 70vh;
-  width: 30vw;
+  height: 74vh;
+  width: 22vw;
  
     backdrop-filter: blur(16px) saturate(180%);
     -webkit-backdrop-filter: blur(16px) saturate(180%);
     background-color: rgba(17, 25, 40, 0.25);
     border-radius: 12px;
     border: 1px solid rgba(255, 255, 255, 0.125);  
-    padding: 38px;  
+    padding: 25px;  
     filter: drop-shadow(0 30px 10px rgba(0,0,0,0.125));
     display: flex;
     flex-direction: column;
@@ -544,12 +540,14 @@ body{
     text-align: center;
     
   margin: 9px;
+  
 }
 
 
 
+
 .wrapper {
-  width: 90%;
+  width: 100%;
   height: 100%;
   
 }
@@ -559,7 +557,7 @@ body{
   background-position: center;
   background-size: cover;
   height: 335px;
-  width: 100%;
+  max-width: 100%;
   border-radius: 12px;
   border: 1px solid rgba(255,255,255, 0.255)
 }
@@ -590,4 +588,24 @@ p {
   flex-wrap: wrap;
   justify-content: space-evenly;
   align-items: center;
+}
+@media (max-width: 767px){
+  .bn16{
+    margin-bottom: -100px;
+  }
+  .container-card {
+  
+    width: 75vw;
+}
+
+}
+.mapa{
+ 
+    
+    background-position: center;
+    background-size: cover;
+    height: 70vh;
+    max-width: 100%;
+    border-radius: 12px;
+    border: 1px solid rgba(255,255,255, 0.255);
 }
