--- a/style.css
+++ b/style.css
@@ -553,7 +553,7 @@ body{
 }
 
 .banner-image {
-  background-image: url(./img/22.jpg);
+  background-image: url(./img/Rectum\ Historia\ \(1\).jpg);
   background-position: center;
   background-size: cover;
   height: 335px;
